--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 dependencies {
     compile files('libs/volley.jar');
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.androidplot:androidplot-core:0.9.6"
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.support:design:23.1.1'
