--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="phoenix.idex"
     android:versionCode="1"
-    android:versionName="1.0" >
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    android:versionName="1.0">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission  android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".RecyclerViewFeed.MainRecyclerView.app.AppController"
         android:allowBackup="true"
@@ -18,10 +20,11 @@
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -31,13 +34,16 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
-            android:theme="@style/AppTheme.NoActionBar"
             android:name=".SignUpActivity"
-            android:label="@string/title_activity_sign_up"/>
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:theme="@style/AppTheme.NoActionBar"
             android:name=".DashActivity"
-            android:label="dash_activity"/>
+            android:label="dash_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UploadPhoto"
+            android:label="@string/title_activity_upload_photo"></activity>
     </application>
 
 </manifest>
