--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'//Swipe for recycler view
+    compile "cz.msebera.android:httpclient:4.4.1.1" //HttpClient support
 }
