--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     repositories {
+        maven { url "https://jitpack.io" }
         mavenCentral()
     }
 
@@ -29,6 +30,7 @@ android {
 dependencies {
     compile files('libs/volley.jar');
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     compile "com.androidplot:androidplot-core:0.9.6"
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
