--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".Activities.MainActivity"
+            android:name=".Activities.StartingActivityLogIn"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -34,6 +34,12 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activities.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <receiver android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
@@ -45,14 +51,14 @@
                 <category android:name="phoenix.idex"/>
             </intent-filter>
         </receiver>
-        <service android:name=".GCMPushReceiverService" android:exported="false">
+        <service android:name=".GoogleCloudMessaging.GCMPushReceiverService" android:exported="false">
 
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
             </intent-filter>
         </service>
         
-        <service android:name=".GCMRegistrationIntentService" android:exported="false">
+        <service android:name=".GoogleCloudMessaging.GCMRegistrationIntentService" android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID"/>
             </intent-filter>
@@ -88,6 +94,11 @@
             android:name=".Activities.EditPasswordActivity"
             android:label="editPassword"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Activities.AboutActivity"
+            android:label="aboutActivity"
+            android:screenOrientation="portrait"></activity>
+
 
 
     </application>
